# GPU-Raytracer

./: CLAUDE.md  CMakeLists.txt  GPU_Raytracer_Architecture_Analysis.md  README_LINUX.md  build.sh  pt.sh
Data/Sponza/: scene.xml
Src/: Input.cpp  Main.cpp
Src/Assets/: BVHLoader.cpp
Src/Assets/Mitsuba/: MitsubaLoader.cpp  XMLParser.h
Src/Core/: Array.h  Assertion.h  IO.cpp  IO.h  OwnPtr.h  Parser.h  StringView.h
Src/Core/Allocators/: AlignedAllocator.h  Allocator.h  LinearAllocator.h
Src/Device/: CUDACall.h  CUDAMemory.h  CUDAModule.cpp  CUDAModule.h
Src/Exporters/: PPMExporter.cpp
Src/Math/: Vector2.h
Src/Renderer/: Scene.cpp
Src/Util/: PerfTest.cpp  Shader.cpp  StringUtil.cpp  ThreadPool.cpp  Util.h
include/Imgui/: imgui_impl_opengl3.cpp
